package edu.fiuba.algo3.model.Card.Modifier;

public interface Modifier {

}
