package edu.fiuba.algo3.model;

public class Game {
}
