@startuml Diagrama de Clases

skinparam monochrome true
hide circle
skinparam classAttributeIconSize 0

title TP2 - Gwent V1 Grupo 11

class Game {
}

class Board {
    - playerSections: List<List<Section>>
    + Board()
    + climateEffect(sectionType: SectionAvailable): void
    + addCardToSection(card: Unit, player: Player): void
    + getPlayerScore(playerId: int): int
}

class Section {
    - sectionAvailable: SectionAvailable
    - unitCards: List<Unit>
    + Section(sectionAvailable: SectionAvailable)
    + addCard(card: Unit): void
    + getType(): SectionAvailable
    + applyClimateEffect(): void
    + getScore(): int
}

class Player {
    - deck: Deck
    - hand: Hand
    - discardPile: DiscardPile
    - totalPoints: int
    - id: int
    - name: String
    + Player(deck: Deck, hand: Hand, discardPile: DiscardPile, id: int)
    + drawCard(): void
    + playCard(index: int, board: Board): Card
    + validateDeck(): void
    + validateHand(): void
    + getTotalPoints(): int
    + getDiscardPile(): DiscardPile
    + getId(): int
}

abstract class CardsContainer {
    - cards: List<Card>
    + addCard(card: Card): void
    + removeCard(index: int): void
    + getCards(): List<Card>
    + size(): int
    + validate(): void
}

class Deck {
    + draw(): Card
    + validate(): void
    + meetsMinimumNumberCards(min: int, max: int): void
}

class Hand {
    + playCard(index: int): Card
    + validate(): void
}

class DiscardPile {
    + validate(): void
}

abstract class Card {
    - name: String
    - points: int
    + Card(name: String, points: int)
    + getPoints(): int
    + getName(): String
    + setPoints(points: int): void
}

abstract class Unit {
    - section: SectionAvailable
    + Unit(name: String, points: int, section: SectionAvailable)
    + reducePointsTo(value: int): void
    + getSection(): SectionAvailable
}

abstract class Special {
    + Special(name: String)
    + applyInBoard(board: Board): void
}

interface Modifier <<interface>>

Game *-- "2" Player
Game *-- Board

Board   *-- Section
Section o-- Unit
Section --> Special

Player  --> "3" CardsContainer

CardsContainer <|-- DiscardPile
CardsContainer <|-- Deck
CardsContainer <|-- Hand

Deck *-- "*" Card
Hand *-- "0..*" Card
DiscardPile *-- "0..*" Card

Card <|-- Unit
Card <|-- Special
Card --> "0..1" Modifier

@enduml

